--- a/src/styles/partials/_init.scss
+++ b/src/styles/partials/_init.scss
@@ -61,18 +61,25 @@ h1,h2, h3,h4,h5,h6 {
     font-weight: 300;
 }
 h1 {
-    font-size: 7rem;
+    font-size: 5rem;
     font-family: $cursive;
     font-weight: 100;
     line-height: 8rem;
+
+    @media all and (min-width: $lg) {
+        font-size: 7rem;
+    }
 }
 h2 {
     font-size: 4rem;
     line-height: 5rem;
 }
 h3 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     line-height: 4rem;
+    @media all and (min-width: $lg) {
+        font-size: 3rem;
+    }
 }
 h4 {
     font-size: 2.5rem; 
